force-app/main/default/objects/Quote__c/fields/Blended_Discount_Pct__c.field-meta.xml
<CustomField>
    <fullName>Blended_Discount_Pct__c</fullName>
    <label>Blended Discount %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>