force-app/main/default/objects/Quote__c/fields/Current_Approval_Level__c.field-meta.xml
<CustomField>
    <fullName>Current_Approval_Level__c</fullName>
    <label>Current Approval Level</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>