force-app/main/default/objects/Quote__c/fields/ERP_Last_Error__c.field-meta.xml
<CustomField>
    <fullName>ERP_Last_Error__c</fullName>
    <label>ERP Last Error</label>
    <length>255</length>
    <type>Text</type>
</CustomField>