force-app/main/default/objects/Quote__c/fields/ERP_Last_Sync__c.field-meta.xml
<CustomField>
    <fullName>ERP_Last_Sync__c</fullName>
    <label>ERP Last Sync</label>
    <type>DateTime</type>
</CustomField>