force-app/main/default/objects/Quote__c/fields/ERP_Next_Attempt_At__c.field-meta.xml
<CustomField>
    <fullName>ERP_Next_Attempt_At__c</fullName>
    <label>ERP Next Attempt At</label>
    <type>DateTime</type>
</CustomField>