force-app/main/default/objects/Quote__c/fields/ERP_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>ERP_Order_Id__c</fullName>
    <externalId>true</externalId>
    <label>ERP Order Id</label>
    <length>64</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>