force-app/main/default/objects/Quote__c/fields/ERP_Sync_Attempts__c.field-meta.xml
<CustomField>
    <fullName>ERP_Sync_Attempts__c</fullName>
    <label>ERP Sync Attempts</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>