force-app/main/default/objects/Quote__c/fields/ERP_Sync_Generation__c.field-meta.xml
<CustomField>
    <fullName>ERP_Sync_Generation__c</fullName>
    <description>Increments when an operator requeues a failed sync. Part of the ERP Idempotency-Key so retries of one generation replay safely while a deliberate resend is treated as a new request.</description>
    <label>ERP Sync Generation</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>