force-app/main/default/objects/Quote__c/fields/List_Amount__c.field-meta.xml
<CustomField>
    <fullName>List_Amount__c</fullName>
    <label>List Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>