force-app/main/default/objects/Quote__c/fields/Max_Line_Discount_Pct__c.field-meta.xml
<CustomField>
    <fullName>Max_Line_Discount_Pct__c</fullName>
    <inlineHelpText>Highest effective discount on any line. Drives approval routing.</inlineHelpText>
    <label>Max Line Discount %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>