force-app/main/default/objects/Quote__c/fields/Pricebook__c.field-meta.xml
<CustomField>
    <fullName>Pricebook__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>QF_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>