force-app/main/default/objects/Quote__c/fields/Required_Approval_Level__c.field-meta.xml
<CustomField>
    <fullName>Required_Approval_Level__c</fullName>
    <label>Required Approval Level</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>